--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
-!
+!.cabecalho{
+    background-color: black;
+    color: beige;
+    display: flex;
+    padding: 24px 0;
+}
+
+.section1{
+    background-color: brown;
+}
+
+.section2{
+    background-color: blue;
+}
