--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 }
 
 .section1 {
-    background-color: black;
+    background-color: aliceblue;
 }
 
 .section2 {
-    background-color: black;
+    background-color: aliceblue;
 }
